--- a/portfolio_app/templates/base.html
+++ b/portfolio_app/templates/base.html
@@ -10,6 +10,14 @@
 	<title></title>
 </head>
 <body>
+	<nav class = "nav-bar-top">
+        <ul class = "nav-bar-ul">
+            <li><a href="about">ABOUT</a></li>
+            <li><a href="portfolio">PORTFOLIO</a></li>
+            <li><a href="about">SOCIAL</a></li>
+            <li><a href="{{url_for('sudoku')}}">SUDOKU</a></li>
+        </ul>
+	</nav>
 	{% block content %}
 	{% endblock %}
 </body>
