--- a/portfolio_app/templates/base.html
+++ b/portfolio_app/templates/base.html
@@ -14,7 +14,7 @@
         <ul class = "nav-bar-ul">
             <li><a href="about">ABOUT</a></li>
             <li><a href="portfolio">PORTFOLIO</a></li>
-            <li><a href="about">SOCIAL</a></li>
+            <li><a href="about">PROJECT</a></li>
             <li><a href="{{url_for('sudoku')}}">SUDOKU</a></li>
         </ul>
 	</nav>
