dabase connected to flask

--- a/portfolio_app/templates/base.html
+++ b/portfolio_app/templates/base.html
@@ -14,8 +14,8 @@
         <ul class = "nav-bar-ul">
             <li><a href="about">ABOUT</a></li>
             <li><a href="portfolio">PORTFOLIO</a></li>
-            <li><a href="about">PROJECT</a></li>
-            <li><a href="{{url_for('sudoku')}}">SUDOKU</a></li>
+			<li><a href="{{url_for('sudoku')}}">SUDOKU</a></li>
+            <li><a href="fifa">FIFA</a></li>
         </ul>
 	</nav>
 	{% block content %}
