--- a/portfolio_app/templates/portfolio.html
+++ b/portfolio_app/templates/portfolio.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<link rel="stylesheet" href="static/style_portfolio.css">
 <div class = "portfolio-container">
 
 	<div class = "portfolio-org-container">
