--- a/portfolio_app/templates/sudoku.html
+++ b/portfolio_app/templates/sudoku.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<link rel="stylesheet" href="static/style_sudoku.css">
 <div class = sudoku-container>
 	
 	<form method="POST" action="/sudoku">
