fifa data in table

--- a/portfolio_app/static/style.css
+++ b/portfolio_app/static/style.css
@@ -17,9 +17,10 @@
 body {
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
+	overflow: hidden;
 }
 
-a {
+.nav-bar-top a {
 	text-decoration: none;
 	color: var(--ivory);
 }
