--- a/portfolio_app/static/style_fifa.css
+++ b/portfolio_app/static/style_fifa.css
@@ -1,15 +1,48 @@
 .fifa-container {
-	padding-top: 70px;
 	margin: auto;
-	width: 60%;
+	padding-top: 70px;
+	width: 90%;
 	font-family: Roboto;
 	font-size: 16px;
+	position:relative;
+	overflow: hidden;
 }
 
-td {
-    border: 1px solid black;
+.fifa_filters {
+	width: 98%;
+	height: 20px;
+	background-color: var(--claret);
+	margin-bottom: 10px;
+	color: white;
+	padding: 2px 5px;
+	border-radius: 5px;
+	transition-duration: 0.5s;
 }
 
-thead {
-    background-color: red;
+.scrollwrapper {
+	height:600px;
+	overflow:auto;  
+	margin-top:0px;
+	background-color: white;
+	border-radius: 5px;
+	transition-duration: 0.5s;
+}
+
+table {
+	width: 100%;
+	font-size: 14px;
+	top: 0;
+	border-spacing: 0px;
+}
+
+th {
+	position: sticky;
+	margin-top: 0px;
+	top: 0;
+	background: var(--claret);
+	color: white;
+}
+
+.table-row:hover {
+	background-color: var(--mistyrose);
 }
