--- a/portfolio_app/templates/fifa.html
+++ b/portfolio_app/templates/fifa.html
@@ -1,21 +1,81 @@
 {% extends "base.html" %}
 {% block content %}
 <link rel="stylesheet" href="static/style_fifa.css">
+
+
+<script>
+
+var buttonstate = new Boolean(false);
+
+function expandit() {
+    if (buttonstate == true) {
+        document.getElementById("filter_box").style.height = "20px";
+        document.getElementById("table-box").style.height = "600px";
+    } else {
+        document.getElementById("filter_box").style.height = "200px";
+        document.getElementById("table-box").style.height = "420px";
+    };
+    buttonstate = !buttonstate;
+    console.log(buttonstate);
+}
+
+
+
+</script>
+
+
+
 <div class = "fifa-container">
-    <table>
-        <thead>
-            <td>Thing 1</td>
-            <td>Thing 2</td>
-        </thead>
-        {% for row in somedata.iterrows() %}
-        <tr>
-            <td>{{ row[1]["short_name"] }}</td>
-            <td>{{ row[1]["club_name"] }}</td>
-        </tr>
-        {%endfor%}
-    </table>
+
+    <div class = "fifa_filters" id = "filter_box" onclick="expandit()">
+        Filters
+    </div>
+
+    <div class = "scrollwrapper" id = "table-box">
 
 
+        <table>
+            <tr class="table-header">
+                <th>ID</th>
+                <th>Name</th>
+                <th>Year</th>
+                <th>Club</th>
+                <th>League</th>
+                <th>Positions</th>
+                <th>Plays As</th>
+                <th>Nation</th>
+                <th>Age</th>
+                <th>Height</th>
+                <th>Weight</th>
+                <th>Overall</th>
+                <th>Joined</th>
+                <th>Value</th>
+                <th>Wage</th>
+                <th>Contract</th>
+            </tr>
+            {% for row in somedata.iterrows() %}
+            <tr class="table-row">
+                <td>{{ row[1]["sofifa_id"] }}</td>
+                <td><a href="{{row[1]['player_url']}}" target="_blank">{{ row[1]["short_name"] }}</a></td>
+                <td>{{ row[1]["year"] }}</td>
+                <td>{{ row[1]["club_name"] }}</td>
+                <td>{{ row[1]["league_name"] }}</td>
+                <td>{{ row[1]["player_positions"] }}</td>
+                <td>{{ row[1]["team_position"] }}</td>
+                <td>{{ row[1]["nationality"] }}</td>
+                <td>{{ row[1]["age"] }}</td>
+                <td>{{ row[1]["height_cm"] }}</td>
+                <td>{{ row[1]["weight_kg"] }}</td>
+                <td>{{ row[1]["overall"] }}</td>
+                <td>{{ row[1]["joined"]|int }}</td>
+                <td>{{ (row[1]["value_eur"]/1000000)|string }}m</td>
+                <td>{{ (row[1]["wage_eur"]/1000)|string }}k</td>
+                <td>{{ row[1]["contract_valid_until"]|int }}</td>
+            </tr>
+            {%endfor%}
+        </table>
+
+    </div>
 </div>
 
 
