--- a/portfolio_app/static/style_fifa.css
+++ b/portfolio_app/static/style_fifa.css
@@ -1,4 +1,4 @@
-.fifa-container {
+.fifa_container {
 	margin: auto;
 	padding-top: 70px;
 	width: 90%;
@@ -10,7 +10,7 @@
 
 .fifa_filters {
 	width: 98%;
-	height: 20px;
+	height: 200px;
 	background-color: var(--claret);
 	margin-bottom: 10px;
 	color: white;
@@ -19,8 +19,17 @@
 	transition-duration: 0.5s;
 }
 
-.scrollwrapper {
-	height:600px;
+#filter_toggle {
+	cursor:se-resize
+}
+
+#filter_form {
+	background-color: green;
+	visibility: visible;
+}
+
+.table_container {
+	height:420px;
 	overflow:auto;  
 	margin-top:0px;
 	background-color: white;
@@ -43,6 +52,6 @@ th {
 	color: white;
 }
 
-.table-row:hover {
+.table_row:hover {
 	background-color: var(--mistyrose);
 }
