--- a/portfolio_app/static/style_fifa.css
+++ b/portfolio_app/static/style_fifa.css
@@ -17,16 +17,62 @@
 	padding: 2px 5px;
 	border-radius: 5px;
 	transition-duration: 0.5s;
+	text-align: center;
 }
 
 #filter_toggle {
-	cursor:se-resize
+	cursor:se-resize;
+	width: 100%;
+}
+
+form {
+	margin: auto;
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
 }
 
 #filter_form {
-	background-color: green;
 	visibility: visible;
 }
+
+.filters_flex {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+}
+
+.filters_flex div {
+	border: 1px solid white;
+	margin: 5px;
+}
+
+.filters_left {width: 30%;}
+.filters_center {width: 65%;}
+.filters_right {width: 5%;}
+
+.filters_left td {
+	text-align: left;
+}
+
+.filters_left select {
+	width: 95%;
+	min-width: 254px;
+	align-items: left;
+	margin-left: 10px;
+	border: none;
+	padding: 0px;
+}
+
+.filters_left input {
+	border: none;
+	width: 95%;
+	padding: 0px;
+	margin-left: 10px;
+}
+
+
+
 
 .table_container {
 	height:420px;
