--- a/portfolio_app/templates/fifa.html
+++ b/portfolio_app/templates/fifa.html
@@ -69,28 +69,52 @@
 
 
                             <tr>
-                                <td>{{ Slider1 }}</td>
-                                <td>{{ Slider1 }}</td>
+                                <td class = "slider_label">{{ form.filter_age_min.label }}</td>
+                                <td class = "slider">{{ form.filter_age_min }}</td>
+                                <td class = slider_break>Text</td>
+                                <td class = slider_break>and</td>
+                                <td class = slider_break>Text</td>
+                                <td class = "slider">{{ form.filter_age_max }}</td>
                             </tr>
                             <tr>
-                                <td>{{ Slider2 }}</td>
-                                <td>{{ Slider2 }}</td>
+                                <td class = "slider_label">{{ form.filter_height_min.label }}</td>
+                                <td class = "slider">{{ form.filter_height_min }}</td>
+                                <td class = slider_break>Text</td>
+                                <td class = slider_break>and</td>
+                                <td class = slider_break>Text</td>
+                                <td class = "slider">{{ form.filter_height_max }}</td>
                             </tr>
                             <tr>
-                                <td>{{ Slider3 }}</td>
-                                <td>{{ Slider3 }}</td>
+                                <td class = "slider_label">{{ form.filter_weight_min.label }}</td>
+                                <td class = "slider">{{ form.filter_weight_min }}</td>
+                                <td class = slider_break>Text</td>
+                                <td class = slider_break>and</td>
+                                <td class = slider_break>Text</td>
+                                <td class = "slider">{{ form.filter_weight_max }}</td>
                             </tr>
                             <tr>
-                                <td>{{ Slider4 }}</td>
-                                <td>{{ Slider4 }}</td>
+                                <td class = "slider_label">{{ form.filter_value_min.label }}</td>
+                                <td class = "slider">{{ form.filter_value_min }}</td>
+                                <td class = slider_break>Text</td>
+                                <td class = slider_break>and</td>
+                                <td class = slider_break>Text</td>
+                                <td class = "slider">{{ form.filter_value_max }}</td>
                             </tr>
                             <tr>
-                                <td>{{ Slider5 }}</td>
-                                <td>{{ Slider5 }}</td>
+                                <td class = "slider_label">{{ form.filter_wage_min.label }}</td>
+                                <td class = "slider">{{ form.filter_wage_min }}</td>
+                                <td class = slider_break>Text</td>
+                                <td class = slider_break>and</td>
+                                <td class = slider_break>Text</td>
+                                <td class = "slider">{{ form.filter_wage_max }}</td>
                             </tr>
                             <tr>
-                                <td>{{ Slider6 }}</td>
-                                <td>{{ Slider6 }}</td>
+                                <td class = "slider_label">{{ form.filter_overall_min.label }}</td>
+                                <td class = "slider">{{ form.filter_overall_min }}</td>
+                                <td class = slider_break>Text</td>
+                                <td class = slider_break>and</td>
+                                <td class = slider_break>Text</td>
+                                <td class = "slider">{{ form.filter_overall_max }}</td>
                             </tr>
                         </table>
                     </div>
